# StockTracker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: AAPL_editorial_1.txt  AAPL_editorial_2.txt
src/: analyze.py  fetch_editorials.py  fetch_yahoo_comments.py
